--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     }
   },
   "dependencies": {
-    "shell-quote": "^1.6.1"
+    "serve-static": "^1.14.1",
+    "shell-quote": "^1.6.1",
+    "socket.io": "^4.1.3",
+    "string-argv": "^0.3.1"
   }
 }
